# win32-resource-tests

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
accelerators/: CMakeLists.txt  accelerators.c  accelerators.rc
bitmap/: CMakeLists.txt  bitmap.c  bitmap.rc
bitmapview/: CMakeLists.txt  bitmapview.c  bitmapview.rc  bitmapview.res
debug/: CMakeLists.txt  debug.c  debug.rc
dialog/: CMakeLists.txt  custom.c  custom.h  dialog.c  dialog.rc  wm.c  wm.h
idtest/: CMakeLists.txt  idtest.c  idtest.h  idtest.rc
menuid/: CMakeLists.txt  menuid.c  menuid.rc
stringtable/: CMakeLists.txt  stringtable.c  stringtable.rc
versioninfo/: CMakeLists.txt  versioninfo.c  versioninfo.rc
